--- a/css/Buttons.css
+++ b/css/Buttons.css
@@ -1,6 +1,6 @@
 ﻿/* CSS Map1 FLOWERBOX
 Version Date        Coder      Comments
-1.0.1   2024-02-01  TBaxter    Initial. Made different so CLEAR MAP could be different
+1.0.1   2024-02-01  TBaxter    Initial. Made different so CLEAR MAP could be red
 */
 
 
