--- a/css/Buttons.css
+++ b/css/Buttons.css
@@ -3,6 +3,9 @@ Version Date        Coder      Comments
 1.0.1   2024-02-01  TBaxter    Initial. Made different so CLEAR MAP could be red
 */
 
+.container{
+    margin-left: -7px;
+}
 
 #AntiqueShops {
     background-color: darkorange;
@@ -13,6 +16,7 @@ Version Date        Coder      Comments
     border-style: double;
     border-radius: 5px;
     border-color: ThreeDDarkShadow;
+    font-family: 'Times New Roman', Times, serif;
 }
     #AntiqueShops:hover {
         background-color: darkgoldenrod;
@@ -29,6 +33,7 @@ Version Date        Coder      Comments
     border-style: double;
     border-radius: 5px;
     border-color: ThreeDDarkShadow;
+    font-family: 'Times New Roman', Times, serif;
 }
 
     #CemeteryandFuneralHomes:hover {
@@ -46,6 +51,7 @@ Version Date        Coder      Comments
     border-style: double;
     border-radius: 5px;
     border-color: ThreeDDarkShadow;
+    font-family: 'Times New Roman', Times, serif;
 }
 
     #Churches:hover {
@@ -63,6 +69,7 @@ Version Date        Coder      Comments
     border-style: double;
     border-radius: 5px;
     border-color: ThreeDDarkShadow;
+    font-family: 'Times New Roman', Times, serif;
 }
 
     #Farms:hover {
@@ -80,6 +87,7 @@ Version Date        Coder      Comments
     border-style: double;
     border-radius: 5px;
     border-color: ThreeDDarkShadow;
+    font-family: 'Times New Roman', Times, serif;
 }
 
     #Hospitals:hover {
@@ -97,6 +105,7 @@ Version Date        Coder      Comments
     border-style: double;
     border-radius: 5px;
     border-color: ThreeDDarkShadow;
+    font-family: 'Times New Roman', Times, serif;
 }
 
     #Museums:hover {
@@ -114,6 +123,7 @@ Version Date        Coder      Comments
     border-style: double;
     border-radius: 5px;
     border-color: ThreeDDarkShadow;
+    font-family: 'Times New Roman', Times, serif;
 }
 
     #Other:hover {
@@ -131,6 +141,7 @@ Version Date        Coder      Comments
     border-style: double;
     border-radius: 5px;
     border-color: ThreeDDarkShadow;
+    font-family: 'Times New Roman', Times, serif;
 }
 
     #ParkandGardens:hover {
@@ -148,6 +159,7 @@ Version Date        Coder      Comments
     border-style: double;
     border-radius: 5px;
     border-color: ThreeDDarkShadow;
+    font-family: 'Times New Roman', Times, serif;
 }
 
     #Residences:hover {
@@ -165,6 +177,7 @@ Version Date        Coder      Comments
     border-style: double;
     border-radius: 5px;
     border-color: ThreeDDarkShadow;
+    font-family: 'Times New Roman', Times, serif;
 }
 
     #Schools:hover {
@@ -182,6 +195,7 @@ Version Date        Coder      Comments
     border-style: double;
     border-radius: 5px;
     border-color: ThreeDDarkShadow;
+    font-family: 'Times New Roman', Times, serif;
 }
 
     #Clear:hover {
@@ -199,6 +213,7 @@ Version Date        Coder      Comments
     border-style: double;
     border-radius: 5px;
     border-color: ThreeDDarkShadow;
+    font-family: 'Times New Roman', Times, serif;
 }
 
     #Theatres:hover {
