--- a/css/History.css
+++ b/css/History.css
@@ -14,9 +14,9 @@ body {
     border: 2px solid orange;
     padding: 20px;
     margin-top: 20px;
-    margin-left: 10px;
+ 
     border-radius: 10px; /* Rounded corners */
-    width: auto; /* Adjusted width */
+    width: 100%; /* Adjusted width */
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Drop shadow */
     overflow: hidden; /* Clear floats */
     float: left;
@@ -57,9 +57,9 @@ body {
     border: 2px solid orange;
     padding: 20px;
     margin-top: 20px;
-    margin-right: 10px;
+
     border-radius: 10px; /* Rounded corners */
-    width: auto;
+    width: 100%;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Drop shadow */
     overflow: hidden; /* Clear floats */
     float: right;
