added/removed more stops to routes, allowed them to be hidden. couple more buttons

--- a/css/Buttons.css
+++ b/css/Buttons.css
@@ -1,11 +1,45 @@
 ﻿/* CSS Map1 FLOWERBOX
 Version Date        Coder      Comments
 1.0.1   2024-02-01  TBaxter    Initial. Made different so CLEAR MAP could be red
+1.1.0   2024-04-01  TBaxter    Added AddStop and RemoveStop
 */
 
-.container{
-    margin-left: -7px;
+
+#RemoveStop {
+    background-color: darkorange;
+    opacity: 0.8;
+    color: black;
+    text-align: center;
+    text-decoration: double;
+    border-style: double;
+    border-radius: 5px;
+    border-color: ThreeDDarkShadow;
+    font-family: 'Times New Roman', Times, serif;
 }
+
+    #RemoveStop:hover {
+        background-color: darkgoldenrod;
+        color: black;
+        opacity: 0.4;
+    }
+
+#AddStop {
+    background-color: darkorange;
+    opacity: 0.8;
+    color: black;
+    text-align: center;
+    text-decoration: double;
+    border-style: double;
+    border-radius: 5px;
+    border-color: ThreeDDarkShadow;
+    font-family: 'Times New Roman', Times, serif;
+}
+
+    #AddStop:hover {
+        background-color: darkgoldenrod;
+        color: black;
+        opacity: 0.4;
+    }
 
 #AntiqueShops {
     background-color: darkorange;
