help button styling added

--- a/css/GeneralStyle.css
+++ b/css/GeneralStyle.css
@@ -9,6 +9,7 @@ Version Date        Coder       Comments
 3.0.2   2024-03-31  TBaxter     Changed font of whole website, made text in header bigger
 3.0.3   2024-04-01  TBaxter     Added margins for route container sed on MapPage
 3.0.4   2024-04-02  EYOUNG      Linked to Adobe fonts, switched to vintage style Trilby font.
+4.0.0   2024-04-10  AGIBBS      Styling for the help button added.
 
 Social media still needs logo images
 
