removed commented out code and fixed warnings

--- a/css/Buttons.css
+++ b/css/Buttons.css
@@ -3,6 +3,7 @@ Version     Date            Coder       Comments
 1.0.1       2024-02-01      TBaxter     Initial. Made different so CLEAR MAP could be red
 1.1.0       2024-04-01      TBaxter     Added AddStop and RemoveStop
 1.2.0       2024-04-02      EYOUNG      Changed button selection.
+1.3.0       2024-04-10      AGIBBS      Added styling for the help button and all containers associated.
 */
 
 
