--- a/css/GeneralStyle.css
+++ b/css/GeneralStyle.css
@@ -38,15 +38,6 @@ header {
     }
 
 
-/* NOT WORKING! HAS NO AFFECT ON THE NAVBAR LOGO NEEDS CORRECTING, HEIGHT IS INLINE FOR NOW */
-/*.navbar-logo {*/
-/*    width: 40px; 
-    height: auto; */
-    /*margin-right: 10px; 
-}*/
-
-
-
 /* Body styling */
 body {
     background-color: beige;
@@ -214,6 +205,7 @@ footer {
     font-size: 25px;
 }
 
+/*blacks out the background while the help message is open*/
 .helpMessageOverlay {
     position: fixed;
     width: 100%;
@@ -240,113 +232,6 @@ footer {
 
     .helpMessage p {
         margin: 0;
-        color: black;
-        /*width: 600px;*/
+        color: black;        
     }
 
-/*Social Media-----------------------------------------------------------------------------------*/
-/*.sticky-social-bar {
-    padding: 0;
-    margin: 0;
-    top: 50%;
-    -webkit-transform: translateY(-50%);
-    -ms-transform: translateY(-50%);
-    transform: translateY(-50%);
-    width: 9.25rem;
-    background-color: #333333;
-    position: fixed;
-    right: -6.75rem;
-}
-
-    .sticky-social-bar .social-icon {
-        list-style-type: none;
-        color: #fefefe;
-        background-color: inherit;
-        margin: 0;
-        transition: all 0.3s ease-in-out;
-        cursor: pointer;
-        font-size: 1.1rem;
-        padding: 0.25rem 0.25rem 0.5rem;
-    }
-
-        .sticky-social-bar .social-icon:first-of-type {
-            padding-top: 0.375rem;
-        }
-
-        .sticky-social-bar .social-icon:last-of-type {
-            padding-bottom: 0.625rem;
-        }
-
-        .sticky-social-bar .social-icon > a {
-            color: inherit;
-            background-color: inherit;
-        }
-
-            .sticky-social-bar .social-icon > a > .fa {
-                padding: .5rem;
-                width: 2rem;
-                height: 2rem;
-                float: left;
-                margin-right: 0.5rem;
-            }
-
-                .sticky-social-bar .social-icon > a > .fa.fa-facebook {
-                    background-color: #3b5998;
-                }
-
-                .sticky-social-bar .social-icon > a > .fa.fa-twitter {
-                    background-color: #55acee;
-                }
-
-                .sticky-social-bar .social-icon > a > .fa.fa-instagram {
-                    background-color: #125688;
-                }
-
-            .sticky-social-bar .social-icon > a > .social-icon-text {
-                font-size: 80%;
-                color: #fefefe;
-                text-transform: uppercase;
-                margin-right: 0.5rem;
-            }
-
-        .sticky-social-bar .social-icon:hover {
-            -webkit-transform: translateX(-8.75rem);
-            -ms-transform: translateX(-8.75rem);
-            transform: translateX(-8.75rem);
-        }
-
-            .sticky-social-bar .social-icon:hover > a {
-                color: inherit;
-                background-color: inherit;
-            }*/
-
-/*Styling for the accordian menu ------------------------------------------------
-#Accordian {
-    border-style: solid;
-    border-color: darkorange;
-    border-width: 0.3vw;
-    background-color: lightgrey;
-    width: 80%;
-    max-height: 200px;
-    margin: 0 auto; /* Made the menu centred 
-    overflow: auto;
-}
-
-.list-group-item {
-    border: hidden;
-}
-
-    .list-group-item:hover {
-        background-color: orange;
-    }
-
-#AccordionContainer, #SelectionContainer {
-    width: 50%;
-    margin: 0 auto;
-    margin-top: 20px;
-}
-.accordion-button:not(.collapsed) {
-    color: black !important;
-    background-color: orange !important;    
-}
-*/
